Bug 233850 - localstore.rdf is not created in user profile if it does not already exist (and doesn't exist in the profile defaults). r=ccarlen sr=darin